--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib_feed4j/xml-apis.jar"/>
 	<classpathentry kind="lib" path="lib_rome/jdom-1.1.3.jar"/>
 	<classpathentry kind="lib" path="lib_rome/rome-1.0.jar"/>
+	<classpathentry kind="lib" path="lib_feedparser/feedparser-0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
