--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.2.jar"/>
+	<classpathentry kind="lib" path="lib_weld/cdi-api.jar"/>
+	<classpathentry kind="lib" path="lib_weld/weld-se.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
