--- a/pom.xml
+++ b/pom.xml
@@ -39,17 +39,24 @@
 			<artifactId>weld-se</artifactId>
 			<version>1.0.1-Final</version>
 		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
+<dependency>
+	<groupId>org.apache.logging.log4j</groupId>
+	<artifactId>log4j-core</artifactId>
+	<version>2.2</version>
+</dependency>
+
+
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-cdi</artifactId>
 			<version>1.0.0-beta1</version>
 		</dependency>
-
+		
+<dependency>
+	<groupId>org.dbunit</groupId>
+	<artifactId>dbunit</artifactId>
+	<version>2.5.0</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
