--- a/pom.xml
+++ b/pom.xml
@@ -13,21 +13,19 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.3.2</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>3.2.8</version>
 		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
@@ -35,28 +33,35 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.jboss.weld</groupId>
+			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se</artifactId>
-			<version>1.0.1-Final</version>
+			<version>2.2.9.Final</version>
 		</dependency>
-<dependency>
-	<groupId>org.apache.logging.log4j</groupId>
-	<artifactId>log4j-core</artifactId>
-	<version>2.2</version>
-</dependency>
+
+
+
 
 
 		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-cdi</artifactId>
-			<version>1.0.0-beta1</version>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.5.0</version>
+			<scope>test</scope>
 		</dependency>
-		
-<dependency>
-	<groupId>org.dbunit</groupId>
-	<artifactId>dbunit</artifactId>
-	<version>2.5.0</version>
-</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.5.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.10</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
