--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -17,7 +17,7 @@
   </listener>  
  
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index</welcome-file>
   </welcome-file-list>
 
 </web-app>
