implementacao do usuario

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,5 +1,5 @@
 # Global logging configuration
-#log4j.rootLogger=ERROR, stdout
+#log4j.rootLogger=DEBUG, stdout
 
 log4j.logger.rssfeedleitor=DEBUG, stdout
  
